tests/cases/must_use.stderr
error: unused return value of `static_vector::Vec::<T, CAPACITY>::first` that must be used
 --> tests/cases/must_use.rs:7:5
  |
7 |     vec.first();
  |     ^^^^^^^^^^^
  |
note: the lint level is defined here
 --> tests/cases/must_use.rs:1:9
  |
1 | #![deny(warnings)]
  |         ^^^^^^^^
  = note: `#[deny(unused_must_use)]` implied by `#[deny(warnings)]`
help: use `let _ = ...` to ignore the resulting value
  |
7 |     let _ = vec.first();
  |     +++++++

error: unused return value of `static_vector::Vec::<T, CAPACITY>::last` that must be used
 --> tests/cases/must_use.rs:8:5
  |
8 |     vec.last();
  |     ^^^^^^^^^^
  |
help: use `let _ = ...` to ignore the resulting value
  |
8 |     let _ = vec.last();
  |     +++++++

error: unused return value of `static_vector::Vec::<T, CAPACITY>::get` that must be used
 --> tests/cases/must_use.rs:9:5
  |
9 |     vec.get(0);
  |     ^^^^^^^^^^
  |
help: use `let _ = ...` to ignore the resulting value
  |
9 |     let _ = vec.get(0);
  |     +++++++

error: unused return value of `static_vector::Vec::<T, CAPACITY>::get_mut` that must be used
  --> tests/cases/must_use.rs:10:5
   |
10 |     vec.get_mut(0);
   |     ^^^^^^^^^^^^^^
   |
help: use `let _ = ...` to ignore the resulting value
   |
10 |     let _ = vec.get_mut(0);
   |     +++++++

error: unused return value of `static_vector::Vec::<T, CAPACITY>::pop` that must be used
  --> tests/cases/must_use.rs:11:5
   |
11 |     vec.pop();
   |     ^^^^^^^^^
   |
help: use `let _ = ...` to ignore the resulting value
   |
11 |     let _ = vec.pop();
   |     +++++++

error: unused return value of `static_vector::Vec::<T, CAPACITY>::pop_if` that must be used
  --> tests/cases/must_use.rs:12:5
   |
12 |     vec.pop_if(|&_i32| true);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: use `let _ = ...` to ignore the resulting value
   |
12 |     let _ = vec.pop_if(|&_i32| true);
   |     +++++++

error: unused `static_vector::Iter` that must be used
  --> tests/cases/must_use.rs:13:5
   |
13 |     vec.iter();
   |     ^^^^^^^^^^
   |
   = note: must consume iterator
help: use `let _ = ...` to ignore the resulting value
   |
13 |     let _ = vec.iter();
   |     +++++++

error: unused `static_vector::IterMut` that must be used
  --> tests/cases/must_use.rs:14:5
   |
14 |     vec.iter_mut();
   |     ^^^^^^^^^^^^^^
   |
   = note: must consume iterator
help: use `let _ = ...` to ignore the resulting value
   |
14 |     let _ = vec.iter_mut();
   |     +++++++

error: unused return value of `static_vector::Vec::<T, CAPACITY>::new` that must be used
  --> tests/cases/must_use.rs:16:5
   |
16 |     Vec::<i32, 1>::new();
   |     ^^^^^^^^^^^^^^^^^^^^
   |
help: use `let _ = ...` to ignore the resulting value
   |
16 |     let _ = Vec::<i32, 1>::new();
   |     +++++++
